# afval-alert

./: .gitignore  README.md  github-feature-builder-prompt.md  package-lock.json  package.json
.claude/: settings.local.json
python-classifier/: .env.example  .gitignore  DEPLOYMENT.md  LOCAL_SETUP.md  MINIKUBE_DEPLOYMENT.md  Makefile  README.md  classifier_config_loader.py  pyproject.toml  pytest.ini  run_integration_test.py
python-classifier/.devcontainer/: devcontainer.json
python-classifier/.github/workflows/: README.md  azure.yml  ci-cd.yml  codespaces-deploy.yml  deploy-gke.yml  deploy-k8s.yml  docker.yml  python-backend.yml  test.yml
python-classifier/classifier/: README.md  main.py  pyproject.toml
python-classifier/config/: afval_types.yaml
python-classifier/deployment/: README.md
python-classifier/deployment/azure/: azure-app-settings.json  azure-deploy.sh
python-classifier/deployment/ci/: azure-pipelines.yml
python-classifier/deployment/docker/: docker-compose.azure.yml  docker-compose.dev.yml  docker-compose.yml
python-classifier/deployment/kubernetes/: deploy-k8s.sh  minikube-deploy.sh  setup-local-k8s.sh
python-classifier/docs/: ARCHITECTURE_V3.md  CLAUDE.md  contract_testing.md  model_stability_optimization.md  verbeteringen.md
python-classifier/documentation/: README.md
python-classifier/documentation/configuratie/: configuratie_systeem.md
python-classifier/documentation/deployment/: AUTHENTICATION-SETUP.md  TESTING-GUIDE.md
python-classifier/documentation/ontwikkeling/: development_setup.md
python-classifier/k8s/: configmap.yaml  deployment.yaml  ingress.yaml  serviceaccount.yaml
python-classifier/scripts/: README.md  download_datasets.py  download_specific_datasets.py  quick.py  run_all_tests_with_datasets.py  run_all_tests_with_datasets_fixed.py  setup.ps1  setup.sh  test_api_complete.py  test_dev_server.py
python-classifier/src/: __init__.py  __main__.py  controller.py  main.py  pipeline.py
python-classifier/src/adapters/: __init__.py  gemini_ai.py  lokale_classificatie.py
python-classifier/src/api/: __init__.py  app.py  main.py  server.py  v2.py
python-classifier/src/config/: __init__.py  afval_config.py  app_config.py  categories.py  implementations.py  interfaces.py  loader.py
python-classifier/src/context_managers/: __init__.py  image_context.py  torch_context.py
python-classifier/src/core/: __init__.py  classification.py  classifier.py
python-classifier/src/decorators/: __init__.py  logging_decorator.py  singleton_decorator.py  validation_decorator.py
python-classifier/src/exceptions/: __init__.py  base_exceptions.py  service_exceptions.py  validation_exceptions.py
python-classifier/src/features/: __init__.py  response_validation.py  tensor_processing.py
python-classifier/src/models/: constants.py  schemas.py
python-classifier/src/services/: __init__.py  service_factory.py
python-classifier/src/utils/: __init__.py  test_runner.py
python-classifier/tests/: conftest.py  test_classifier.py  test_new_format.py  test_utils.py
python-classifier/tests/contracts/: conftest.py  test_classification_contract.py  test_openapi_contract.py  test_pact_consumer.py
python-classifier/tests/e2e/: __init__.py  test_api_routes_complete.py  test_api_routes_optimized.py  test_classifier_e2e.py  test_complete_system.py  test_image_integration.py  test_real_gemini_e2e.py
python-classifier/tests/integration/: test_actual_adapter.py  test_gemini_integration.py  test_integration.py  test_services.py  test_step_by_step.py  test_upload.py
python-classifier/tests/unit/: test_api.py  test_api_endpoints.py  test_config_loading.py  test_core_classification.py  test_edge_cases.py  test_gemini_ai_adapter.py  test_gemini_api.py  test_lokale_classificatie.py  test_performance_monitoring.py  test_pipeline.py  test_raw_gemini.py  test_unit.py  test_utils.py
(+581 files in other folders)
